--- a/style/style.css
+++ b/style/style.css
@@ -33,6 +33,7 @@
     font-weight: 500;
 }
 
+
 .navbar .menu li{
     list-style: none;
     display: inline-block;
@@ -43,6 +44,11 @@
     font-size: 18px;
     font-weight: 500;
     margin-left: 25px;
+    transition: color 0.3s ease;
+}
+
+.navbar .menu li a:hover{
+    color: rgb(117, 206, 123);
 }
 
 .home{
