--- a/style/style.css
+++ b/style/style.css
@@ -16,9 +16,14 @@
 .navbar{
     position: fixed;
     width: 100%;
-    /*background: rgb(13, 13, 13); */
     padding: 30px 0;
     font-family: 'Akshar', sans-serif;
+    transition: all 0.3s ease;
+}
+
+.navbar.sticky{
+    background: rgb(13, 13, 13); 
+    padding: 15px 0;
 }
 
 .navbar .max-width{
@@ -32,7 +37,6 @@
     font-size: 35px;
     font-weight: 500;
 }
-
 
 .navbar .menu li{
     list-style: none;
@@ -48,7 +52,11 @@
 }
 
 .navbar .menu li a:hover{
-    color: rgb(117, 206, 123);
+    color: rgb(126, 214, 126);
+}
+
+.navbar.sticky .menu li a:hover{
+    color: rgb(78, 76, 76);
 }
 
 .home{
@@ -82,4 +90,54 @@
 .home .home-content .text-3 span{
     color: #fff;
     font-weight: 500;
+}
+
+.menu-btn{
+    color: #fff;
+    font-size: 25px;
+    cursor: pointer;
+    display: none;
+}
+
+@media (max-width: 947px){
+    .max-width{
+        padding: 0 50px;
+    }
+    .menu-btn{
+        display: block;
+        z-index: 999;
+    }
+    .navbar .menu{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        left: 0;
+        top: 0;
+        background: #111;
+        padding-top: 80px;
+        text-align: center;
+    }
+    .navbar .menu li{
+        display: block;
+    }
+    .navbar .menu li a{
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
+    }
+    .home .home-content .text-2{
+        font-size: 70px;
+    }
+    .home .home-content .text-3{
+        font-size: 35px;
+    }
+}
+
+@media (max-width: 690px){
+    .home .home-content .text-2{
+        font-size: 60px;
+    }
+    .home .home-content .text-3{
+        font-size: 32px;
+    }
 }
