--- a/style/style.css
+++ b/style/style.css
@@ -111,11 +111,12 @@
         position: fixed;
         width: 100%;
         height: 100vh;
-        left: 0;
+        left: -100%;
         top: 0;
         background: #111;
         padding-top: 80px;
         text-align: center;
+        transition: all 0.3s ease;
     }
     .navbar .menu li{
         display: block;
