--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,7 @@
     width: 100%;
     padding: 30px 0;
     font-family: 'Akshar', sans-serif;
+    z-index: 999;
     transition: all 0.3s ease;
 }
 
@@ -123,6 +124,13 @@ section{
     font-family: 'Robot', sans-serif;
 }
 
+.about .about-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .about .title{
     font-family: 'Akshar', sans-serif;
     text-align: center;
@@ -130,12 +138,67 @@ section{
     font-weight: 500;
     margin-bottom: 60px;
     padding-bottom: 20px;
+    position: relative;
 }
 
+.about .title::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #111;
+    transform: translateX(-50%);
+}
+
+.about .title::after{
+    content: "Who am I?";
+    position: absolute;
+    bottom: -12px;
+    left: 50%;
+    font-size: 20px;
+    background: #fff;
+    color: rgb(8, 70, 63);
+    padding: 5px;
+    transform: translateX(-50%);
+}
+
+.about .about-content .left{
+    width: 45%;
+}
+
+.about .about-content .right{
+    width: 55%;
+}
+
+.about .about-content .right .text{
+    font-size: 25px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.about .about-content .right p{
+    text-align: justify;
+}
+
+.about .about-content .right a{
+    display: inline-block;
+    background: rgb(8, 70, 63);
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid rgb(8, 70, 63);
+    transition: all 0.3s ease;
+}
 .about .about-content .left img{
     width: 400px;
     height: 400px;
     object-fit: cover;
+    border-radius: 6px;
 }
 
 @media (max-width: 1104px){
