--- a/style/style.css
+++ b/style/style.css
@@ -120,11 +120,11 @@ section{
     padding: 100px 0;
 }
 
-.about, .services{
+.about, .services, .skills{
     font-family: 'Robot', sans-serif;
 }
 
-.about .about-content, .services .serv-content{
+.about .about-content, .services .serv-content, .skills .skills-content{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -217,7 +217,7 @@ section .title::after{
 }
 
 .services .title::after{
-    content: "My Experiences At Companys";
+    content: "At Companys";
     background: #111;
 }   
 
@@ -257,6 +257,76 @@ section .title::after{
     font-weight: 700;
     margin: 10px 0 7px 0;
 }
+
+.skills .title::after{
+    content: "Prog.Languages";
+}
+
+.skills .skills-content .column{
+    width: calc(50% - 30px);
+}
+
+.skills .skills-content .left .text{
+    font-size: 25px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.skills .skills-content .right .bars{
+    margin-bottom: 15px;
+}
+
+.skills .skills-content .right .info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.skills .skills-content .right span{
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.skills .skills-content .right .line{
+    width: 100%;
+    height: 5px;
+    background: #ccc;
+    position: relative;
+}
+
+.skills .skills-content .right .line::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgb(8, 70, 63);
+}
+
+.skills .skills-content .right .java::before{
+    width: 93%;
+}
+
+.skills .skills-content .right .js::before{
+    width: 85%;
+}
+
+.skills .skills-content .right .html::before{
+    width: 80%;
+}
+
+.skills .skills-content .right .python::before{
+    width: 47%;
+}
+
+.skills .skills-content .right .css::before{
+    width: 42%;
+}
+
+.skills .skills-content .right .sql::before{
+    width: 20%;
+}
+
 
 @media (max-width: 1300px){
     .navbar .max-width{
