--- a/style/style.css
+++ b/style/style.css
@@ -272,6 +272,28 @@ section .title::after{
     margin-bottom: 10px;
 }
 
+.skills .skills-content .left p{
+    text-align: justify;
+}
+
+.skills .skills-content .left a{
+    display: inline-block;
+    background: rgb(8, 70, 63);
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px 16px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid rgb(8, 70, 63);
+    transition: all 0.3s ease;
+}
+
+.skills .skills-content .left a:hover{
+    color: rgb(8, 70, 63);
+    background: none;
+}
+
 .skills .skills-content .right .bars{
     margin-bottom: 15px;
 }
@@ -394,6 +416,10 @@ section .title::after{
     .services .serv-content .card{
         width: calc(40% - 10%);
         margin-bottom: 20px;
+    }
+    .skills .skills-content .column{
+        width: 100%;
+        margin-bottom: 35px;
     }
 }
 
