--- a/style/style.css
+++ b/style/style.css
@@ -120,11 +120,11 @@ section{
     padding: 100px 0;
 }
 
-.about, .services, .skills{
-    font-family: 'Robot', sans-serif;
+.about, .services, .skills, .contact{
+    font-family: 'Akshar', sans-serif;;
 }
 
-.about .about-content, .services .serv-content, .skills .skills-content{
+.about .about-content, .services .serv-content, .skills .skills-content, .contact .contact-content{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -343,6 +343,87 @@ section .title::after{
 
 .skills .skills-content .right .css::before{
     width: 42%;
+}
+
+.contact .contact-content .column{
+    width: calc(50% - 30px);
+}
+
+.contact .contact-content .left p{
+    text-align: justify;
+}
+
+.contact .contact-content .text{
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.contact .contact-content .left .icons{
+    margin: 10px 0;
+}
+
+.contact .contact-content .row{
+    display: flex;
+    height: 65px;
+    align-items: center;
+}
+
+.contact .contact-content .row .info{
+    margin-left: 30px;
+}
+
+.contact .contact-content .row .info .head{
+    font-weight: 500;
+}
+
+.contact .contact-content .row .info .sub-title{
+    color: #333;
+}
+
+.contact .contact-content .row ion-icon{
+    font-size: 25px;
+    color: rgb(8, 70, 63);
+}
+
+.contact .right form .fields{
+    display: flex;
+}
+
+.contact .right form .fields, .contact .right form .fields .field{
+    width: 100%;
+    height: 45px;
+    margin-bottom: 15px;
+}
+
+.contact .right form .fields input, .contact .right form .textarea textarea{
+    width: 100%;
+    height: 100%;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    outline: none;
+    padding: 0 15px;
+    font-size: 17px;
+    font-family: 'Akshar', sans-serif;
+}
+
+.contact .right form .name{
+    margin-right: 10px;
+
+}
+
+.contact .right form .email{
+    margin-left: 10px;
+}
+
+.contact .right form .textarea{
+    width: 100%;
+    height: 80px;
+}
+
+.contact .right form .textarea textarea{
+    padding-top: 10px;
+    resize: none;
 }
 
 @media (max-width: 1300px){
