--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,10 @@
     text-decoration: none;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 .max-width{
     max-width: 1300px;
     padding: 0 80px;
@@ -53,7 +57,7 @@
 }
 
 .navbar .menu li a:hover{
-    color: rgb(126, 214, 126);
+    color: rgb(8, 70, 63);
 }
 
 .navbar.sticky .menu li a:hover{
@@ -89,7 +93,7 @@
 }
 
 .home .home-content .text-3 span{
-    color: #fff;
+    color: rgb(8, 70, 63);
     font-weight: 500;
 }
 
@@ -114,6 +118,31 @@
     font-size: 25px;
     cursor: pointer;
     display: none;
+}
+
+.scroll-up-btn{
+    position: fixed;
+    width: 41px;
+    height: 45px;
+    right: 30px;
+    bottom: 10px;
+    text-align: center;
+    line-height: 50px;
+    color: #fff;
+    background: rgb(8, 70, 63);
+    border-radius: 6px;
+    font-size: 25px;
+    z-index: 9999;
+    cursor: pointer;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+
+.scroll-up-btn.show{
+    opacity: 1;
+    pointer-events: auto;
+    bottom: 30px;
 }
 
 section{
@@ -158,7 +187,7 @@ section .title::after{
     left: 50%;
     font-size: 20px;
     background: #fff;
-    color: rgb(8, 70, 63);
+    color: rgb(196, 62, 124);
     padding: 5px;
     transform: translateX(-50%);
 }
@@ -264,6 +293,10 @@ section .title::after{
     content: "Prog.Languages";
 }
 
+.contact .title::after{
+    content: "Others";
+}
+
 .skills .skills-content .column{
     width: calc(50% - 30px);
 }
@@ -346,6 +379,7 @@ section .title::after{
 .skills .skills-content .right .css::before{
     width: 42%;
 }
+
 
 .contact .contact-content .column{
     width: calc(50% - 30px);
